# tvnotifier

./: .gitignore  Cargo.toml
database/: create_table_movies.sql  create_table_shows.sql  create_table_users.sql
src/: main.rs
